--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
 }
 
-group 'arseniy'
+group 'crackteam'
 version '0.0.1'
 
 repositories {
@@ -24,7 +24,7 @@ compileTestKotlin {
 jar {
     //add main class to the manifest
     manifest {
-        attributes 'Main-Class': 'com.arseniy.MainKt'
+        attributes 'Main-Class': 'com.crackteam.MainKt'
     }
 
     //collect and add all dependencies
